--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,12 @@ Author: Your Name
 Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one or more full
          sentences.
-License: GPL (>= 2)
+License: GPL (>= 3)
 Imports: Rcpp (>= 1.0.8)
 LinkingTo: Rcpp
 URL: https://github.com/AuroreAA/ICSClust
 BugReports: https://github.com/AuroreAA/ICSClust/issues
+RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
