--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,16 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one or more full
          sentences.
 License: GPL (>= 3)
-Imports: Rcpp (>= 1.0.8)
+Encoding: UTF-8
+Imports: 
+    cluster,
+    heplots,
+    ICS,
+    ICtest,
+    mclust,
+    moments,
+    Rcpp (>= 1.0.8),
+    tclust
 LinkingTo: Rcpp
 URL: https://github.com/AuroreAA/ICSClust
 BugReports: https://github.com/AuroreAA/ICSClust/issues
