--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,15 @@ export(kmeansClust)
 export(med_crit)
 export(normal_crit)
 export(pamClust)
+export(tcov1)
+export(tcov2)
 export(tkmeansClust)
 export(var_crit)
 import(ICS)
 import(ICtest)
 importFrom(cluster,pam)
 importFrom(heplots,etasq)
+importFrom(mclust,adjustedRandIndex)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
 importFrom(moments,bonett.test)
@@ -20,3 +23,4 @@ importFrom(moments,jarque.test)
 importFrom(stats,kmeans)
 importFrom(stats,shapiro.test)
 importFrom(tclust,tkmeans)
+useDynLib(ICSClust, .registration = TRUE)
