--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export(ICSClust)
 export(ICS_comp_crit)
+export(ICS_tcov)
 export(discriminatory_crit)
 export(kmeansClust)
 export(med_crit)
 export(normal_crit)
 export(pamClust)
-export(tcov1)
-export(tcov2)
+export(tcov)
 export(tkmeansClust)
 export(var_crit)
 import(ICS)
