--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(med_crit)
 export(normal_crit)
 export(pamClust)
 export(tcov)
+export(tcov_amap)
 export(tkmeansClust)
 export(var_crit)
 import(ICS)
 import(ICtest)
+importFrom(amap,W)
 importFrom(cluster,pam)
 importFrom(heplots,etasq)
 importFrom(mclust,adjustedRandIndex)
@@ -22,5 +24,6 @@ importFrom(moments,bonett.test)
 importFrom(moments,jarque.test)
 importFrom(stats,kmeans)
 importFrom(stats,shapiro.test)
+importFrom(stats,var)
 importFrom(tclust,tkmeans)
 useDynLib(ICSClust, .registration = TRUE)
