implemented SCOV and UCOV

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,18 @@
 
 export(ICSClust)
 export(ICS_comp_crit)
+export(ICS_scov)
 export(ICS_tcov)
+export(ICS_ucov)
 export(discriminatory_crit)
 export(kmeansClust)
 export(med_crit)
 export(normal_crit)
 export(pamClust)
+export(scov)
 export(tcov)
 export(tkmeansClust)
+export(ucov)
 export(var_crit)
 import(ICS)
 import(ICtest)
