first version of simulation script

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ S3method(normal_crit,ICS)
 S3method(normal_crit,default)
 S3method(var_crit,ICS)
 S3method(var_crit,default)
+export(ICS_lcov)
+export(ICS_mcd)
+export(ICS_mlc)
+export(ICS_rmcd)
 export(ICS_scov)
 export(ICS_tcov)
 export(ICS_ucov)
@@ -25,14 +29,17 @@ export(ucov)
 export(var_crit)
 import(ICS)
 import(ICtest)
+importFrom(ICS,tM)
 importFrom(amap,W)
 importFrom(cluster,pam)
+importFrom(fpc,localshape)
 importFrom(heplots,etasq)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
 importFrom(moments,bonett.test)
 importFrom(moments,jarque.test)
 importFrom(mvtnorm,rmvnorm)
+importFrom(rrcov,CovMcd)
 importFrom(stats,kmeans)
 importFrom(stats,shapiro.test)
 importFrom(stats,var)
