--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(ICS_scov)
 export(ICS_tcov)
 export(ICS_ucov)
 export(discriminatory_crit)
+export(fixOrder)
 export(kmeans_clust)
 export(med_crit)
 export(mixture_sim)
@@ -28,9 +29,8 @@ export(tkmeans_clust)
 export(ucov)
 export(var_crit)
 import(ICS)
-import(ICtest)
 importFrom(ICS,tM)
-importFrom(amap,W)
+importFrom(RcppRoll,roll_var)
 importFrom(cluster,pam)
 importFrom(fpc,localshape)
 importFrom(heplots,etasq)
@@ -42,6 +42,5 @@ importFrom(mvtnorm,rmvnorm)
 importFrom(rrcov,CovMcd)
 importFrom(stats,kmeans)
 importFrom(stats,shapiro.test)
-importFrom(stats,var)
 importFrom(tclust,tkmeans)
 useDynLib(ICSClust, .registration = TRUE)
