add `screeplot_crit` and `pairs_plot`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ S3method(med_crit,ICS)
 S3method(med_crit,default)
 S3method(normal_crit,ICS)
 S3method(normal_crit,default)
+S3method(pairs_plot,ICS)
+S3method(pairs_plot,data.frame)
+S3method(pairs_plot,default)
 S3method(var_crit,ICS)
 S3method(var_crit,default)
 export(ICS_lcov)
@@ -21,18 +24,23 @@ export(kmeans_clust)
 export(med_crit)
 export(mixture_sim)
 export(normal_crit)
+export(pairs_plot)
 export(pam_clust)
 export(runif_outside_range)
 export(scov)
+export(screeplot_crit.ICS)
 export(tcov)
 export(tkmeans_clust)
 export(ucov)
 export(var_crit)
+import(GGally)
 import(ICS)
+import(ggplot2)
 importFrom(ICS,tM)
 importFrom(RcppRoll,roll_var)
 importFrom(cluster,pam)
 importFrom(fpc,localshape)
+importFrom(ggthemes,scale_colour_colorblind)
 importFrom(heplots,etasq)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
