--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(normal_crit,default)
 S3method(scree_plot,ICS)
 S3method(var_crit,ICS)
 S3method(var_crit,default)
+export(ICSClust)
 export(ICS_lcov)
 export(ICS_mcd)
 export(ICS_mlc)
