select_plot for screeplot or specific plots depending on the criterion for selecting the components

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,10 @@ Imports:
     heplots,
     mclust,
     moments,
+    mvtnorm,
+    RcppRoll,
+    rrcov,
+    scales,
     tclust
 Depends:
     ICS
@@ -42,6 +46,7 @@ Author:
     Klaus Nordhausen [aut] (<https://orcid.org/0000-0002-3758-8501>)
 Maintainer: Aurore Archimbaud <archimbaud@ese.eur.nl>
 RoxygenNote: 7.2.3
+Roxygen: list(markdown = TRUE)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
