--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ S3method(med_crit,ICS)
 S3method(med_crit,default)
 S3method(normal_crit,ICS)
 S3method(normal_crit,default)
-S3method(scree_plot,ICS)
+S3method(select_plot,ICS)
+S3method(select_plot,ICS_crit)
+S3method(select_plot,data.frame)
+S3method(select_plot,default)
 S3method(var_crit,ICS)
 S3method(var_crit,default)
 export(ICSClust)
@@ -24,12 +27,13 @@ export(component_plot)
 export(discriminatory_crit)
 export(kmeans_clust)
 export(med_crit)
+export(med_plot)
 export(mixture_sim)
 export(normal_crit)
 export(pam_clust)
 export(runif_outside_range)
 export(scov)
-export(scree_plot)
+export(select_plot)
 export(tcov)
 export(tkmeans_clust)
 export(ucov)
@@ -41,7 +45,6 @@ importFrom(ICS,tM)
 importFrom(RcppRoll,roll_var)
 importFrom(cluster,pam)
 importFrom(fpc,localshape)
-importFrom(ggthemes,scale_colour_colorblind)
 importFrom(heplots,etasq)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
@@ -49,6 +52,7 @@ importFrom(moments,bonett.test)
 importFrom(moments,jarque.test)
 importFrom(mvtnorm,rmvnorm)
 importFrom(rrcov,CovMcd)
+importFrom(scales,hue_pal)
 importFrom(stats,kmeans)
 importFrom(stats,shapiro.test)
 importFrom(tclust,tkmeans)
