--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,11 @@ S3method(med_crit,ICS)
 S3method(med_crit,default)
 S3method(normal_crit,ICS)
 S3method(normal_crit,default)
+S3method(plot,ICSClust)
+S3method(select_plot,ICS_crit)
+S3method(select_plot,data.frame)
 S3method(select_plot,default)
+S3method(summary,ICSClust)
 S3method(var_crit,ICS)
 S3method(var_crit,default)
 export(ICSClust)
