--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(med_crit)
 export(mixture_sim)
 export(normal_crit)
 export(pam_clust)
+export(rimle_clust)
 export(runif_outside_range)
 export(scov)
 export(select_plot)
