--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: ICSClust
 Type: Package
-Title: What the Package Does in One 'Title Case' Line
-Version: 0.1.0
+Title: Tandem Clustering with Invariant Coordinate Selection
+Version: 0.1.1
 Date: 2023-01-31
-Description: One paragraph description of what the package does as one or more full
-         sentences.
+Description: Implementation of Tandem Clustering with Invariant Coordinate 
+              Selection with different scatter matrices and choices for the 
+              selection of components.
 License: GPL (>= 3)
 Encoding: UTF-8
 Imports: 
