add rimle and mclust clustering methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(ICS_ucov)
 export(component_plot)
 export(discriminatory_crit)
 export(kmeans_clust)
+export(mclust_clust)
 export(med_crit)
 export(mixture_sim)
 export(normal_crit)
@@ -45,11 +46,13 @@ importFrom(RcppRoll,roll_var)
 importFrom(cluster,pam)
 importFrom(fpc,localshape)
 importFrom(heplots,etasq)
+importFrom(mclust,Mclust)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
 importFrom(moments,bonett.test)
 importFrom(moments,jarque.test)
 importFrom(mvtnorm,rmvnorm)
+importFrom(otrimle,rimle)
 importFrom(rrcov,CovMcd)
 importFrom(scales,hue_pal)
 importFrom(stats,as.formula)
