add import mclustBIC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(cluster,pam)
 importFrom(fpc,localshape)
 importFrom(heplots,etasq)
 importFrom(mclust,Mclust)
+importFrom(mclust,mclustBIC)
 importFrom(moments,agostino.test)
 importFrom(moments,anscombe.test)
 importFrom(moments,bonett.test)
