add the `rmclust_clust` to perform mclust with or without noise

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(mixture_sim)
 export(normal_crit)
 export(pam_clust)
 export(rimle_clust)
+export(rmclust_clust)
 export(runif_outside_range)
 export(scov)
 export(select_plot)
