rename `ICS_mcd` to `ICS_mcd_raw` and `ICS_rmcd` to `ICS_mcd_rwt`. closes #24

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,9 @@ S3method(var_crit,ICS)
 S3method(var_crit,default)
 export(ICSClust)
 export(ICS_lcov)
-export(ICS_mcd)
+export(ICS_mcd_raw)
+export(ICS_mcd_rwt)
 export(ICS_mlc)
-export(ICS_rmcd)
 export(ICS_scov)
 export(ICS_tcov)
 export(ICS_ucov)
