--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(med_crit,default)
 S3method(normal_crit,ICS)
 S3method(normal_crit,default)
 S3method(plot,ICSClust)
+S3method(print,ICSClust_summary)
 S3method(select_plot,ICS_crit)
 S3method(select_plot,data.frame)
 S3method(select_plot,default)
